src/index.scss
/* ... */
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

@font-face{
    font-family: chicago;
    src: url(../fonts/ChicagoNormal.ttf);
}

body {
    background-image: url(../images/background.png);
    display: block;
    font-family: 'chicago';
}

#wrapper {
    width: 100%;
    height: 850px;
    border: none;
    display: flex;
    justify-content: center;
    padding-top: 25px;
}

#innerbox {
    width: 1000px;
    height: 100%;
    border: none;
 

    display: flex;
    flex-direction: column;
    justify-content: end;
    align-items: center;
}

#celeb {
    margin-left: 10px;

}
#keyboard {
    background-repeat: no-repeat;
    width: 800px;
    height: 275px;
    background-size: 800px, 308px;
    opacity: 100%;
    border: none;
    display: flex;
    position: absolute;    


}

#monitor {
    background-repeat: no-repeat;
    width: 680px;
    height: 720px;
    background-size: 670px,  650px;
    opacity: 100%;
    background-image :url(../images/Computer.png);
    border: none;

}

#inner-monitor {
    margin-left: 90px;
    margin-top: 40px;
    width: 420px;
    height: 330px;
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: space-evenly;

}


#modal-wrapper{
    display: none;
    position: absolute;
    margin-left: -3px;
    width: 420px;
    height: 324px;
    background-color: rgba(169, 169, 169, 0.85);
    z-index: 1;
    border-radius: 25px;
}

#modal{
    display: none;
    width: 280px;
    height: fit-content;
    background-color: white;
    opacity: 100;
    border: black 1px solid;
    margin-left: 50px;
    margin-top: 100px;
    font-size: 13px;
    font-family: Arial;
    padding: 10px 17px 10px;
}

#text-box{
    height: 250px;
    width: 380px;
    background-image: url(../images/window.png);
    border: solid black 1px;
    margin-top: 20px;

    
}
#entry-box {
    height: 20px;
    width: 140px;
    margin-top: 00px;
 
}

#instructions{
    display: none;
}

#submit {
 width: 120px;
}

#getSloth {
    height: 30px;
    width: 370px;
    display: flex; 
    justify-content: space-between;
    align-items: center;
}


ul {
    margin-top: 10px;
    margin-left: 7px;
}

#youEntered {
    margin-left: 10px;
}

#otherSloths {
    margin-left: 10px;
}
#slHeader {
    padding-left: 10px;
   

}

#youEntered {
    font-size:20px;
    font-family: 'chicago';
    margin-top: 10px;
}

.sloth-list li:hover {
    cursor: pointer;
}

#otherSloths{
    font-family:'chicago';
    font-size: 14px;
}

#slothItem{
    font-family:'chicago'
}

#intro-box{
    margin-left: 10px;
    font-family:'chicago';
    margin-right: 10px;
    margin-top: 15px;
}

#explanation-box{
    margin-left: 15px;
    font-family: 'chicago';
    margin-right: 10px;
    margin-top: 20px;
    height: 230px;
    display: none;
    flex-direction: column;
}

#handpos-box{
    margin-left: 0px;
    font-family: 'chicago';
    margin-top: 20px;
    margin-left: 10px;
    height: 230px;
    display: none;
    flex-direction: column;
    font-size: 14px;
}

#handpos-box2{
    margin-left: 0px;
    font-family: 'chicago';
    margin-top: 20px;
    margin-left: 10px;
    height: 230px;
    display: none;
    flex-direction: column;
    font-size: 14px;
}

#handpos-text2{
    display: flex;
  
}

#exp_header{
    font-size: 20px;
}

.expHolder{
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.expButton{
    width: 120px;
    height: 50px;
    border-radius: 15px;
    font-size: 12px;
    background-color: white;
}

.expButton:hover{
    background-color: gray;
    cursor: pointer;
}

.backToRules{
    position: absolute;
    height: 20px;
    width: 150px;
    margin-top: 185px;
    margin-left: 20px;
    background-color: white;
    border-radius: 6px;
}

.next{
    position: absolute;
    height: 20px;
    width: 150px;
    margin-top: 185px;
    margin-left: 190px;
    background-color: white;
    border-radius: 6px;
}

.previous{
    position: absolute;
    height: 20px;
    width: 150px;
    margin-top: 185px;
    margin-left: 190px;
    background-color: white;
    border-radius: 6px;
    display: none;
}

.previous:hover{
    background-color: gray;
    cursor: pointer;
}

.next:hover{
    background-color: gray;
    cursor: pointer;
}

.backToRules:hover{
    background-color: gray;
    cursor: pointer;
}


#danceSloth{
    height: 120px;
    width: 120px;
    margin-left: 20px;
    margin-top: 10px
}
.intro{ 
    font-family:'chicago';
    font-size: 5px;
}

.introText{
    font-size: 12px;
}

#handPosIntro{
    width: 220px;
}

#slothCatIntro{
    width: 220px;
}

#slothGenIntro{
    width: 220px;
}

#breakaway{
    color: white;
}

#breakaway2{
    color: white;
}

#clippy{
    background-image: url(../images/myownclip.gif);
    position: absolute;
    height: 125px;
    width: 140px;
    margin-left: 230px;
    margin-top: 30px;
    background-size: 140px;
}



.introTextExample{
    font-size: 16px;
    color: red;
}

.introTextExample2{
    font-size: 16px;
    color: blue;
}

#yourWord {
    font-size: 16px;
    color: red;
}

#yo {
    color: red;
}

#up {
    color: blue;
}

#as {
    color: red;
}

#we {
    color: blue;
}

.brk{
    color: white;   
}
.brk2{
    color: white;
}

#list-box{
    display: flex;
    justify-content: space-evenly;

}

.leftHand{
    width: 280px;
    height: 385px;
    background-repeat: no-repeat;
    position: absolute;
    padding-left: 70px;
    padding-top: 100px;
    background-size: 250px 385px;
    border: none;
   
}


#q_topper {
    margin-left: 85px;
    margin-top: 65px;
    width: 50px;
    height: 50px;
    background-color: red;
    opacity: 50%;
    position: absolute;
}
/* ... */

